tests/org.eclipse.php.core.tests/workspace/errors/php74/arrowFunctionValidator.pdtt
--TEST--
Bug 551301 - PHP 7.4 Support
--FILE--
<?php
function ($param)  {
    return fn($param2) => $param . $param2 . $param3;
};


--EXPECT--
